Updated Readme for GUI