@@ -6,8 +6,6 @@ Download Repository from: [GitHub](https://github.com/ksmills9/planner)
 ## About
 The program connects you to a MySQL database hosted on an AWS EC2 server. For Java to connect to the database, you need the JDBC driver for MySQL, [Connector/J](https://dev.mysql.com/downloads/connector/j/). For ease of access, `mysql-connector-java-8.0.15.jar` has been added to the project repository.
 
-For now, only a console version of the program is available. In future, we will release the GUI version using JavaFX.
-
 ## Setting up the program
 
 - Download the repository and keep all the .java file in the same directory.
@@ -45,27 +43,28 @@ For now, only a console version of the program is available. In future, we will 
   - Go to Build → Edit Configurations and type `console` in 'Program arguments' field. (IntelliJ)
   - Go to Run → Run Configurations tab and type `console` in 'Program arguments' section. (Eclipse)
 
-## Running the program (GUI)
+## Running the program (GUI | Java 11)
+To run the GUI version with Java 11, you will need to download [JavaFX 11](https://openjfx.io/) separately. After downloading it, follow the following steps. 
 - **Windows**
   - Open command prompt and move to the same directory where you kept the `.java` files.
   - Type in the following command 
   ```
-  javac -cp .;"path\to\mysql-connector-java-X.X.XX.jar" *.java
+  javac --module-path "path\to\javafx-sdk-11.X.X\lib" --add-modules=javafx.controls,javafx.fxml -cp .;"path\to\mysql-connector-java-X.X.XX.jar" *.java
   ```
   - After the Java is done compiling, type in the following:
   ```
-  java -cp .;"path\to\mysql-connector-java-X.X.XX.jar" Main gui
+  java --module-path "path\to\javafx-sdk-11.X.X\lib" --add-modules=javafx.controls,javafx.fxml -cp .;"path\to\mysql-connector-java-X.X.XX.jar" Main gui
   ```
   - Make sure to add `gui` at the end.
 - **Linux/MacOS**
   - Open command prompt and move to the same directory where you kept the `.java` files.
   - Type in the following command 
   ```
-  javac -cp .:"path\to\mysql-connector-java-X.X.XX.jar" *.java
+  javac --module-path "path\to\javafx-sdk-11.X.X\lib" --add-modules=javafx.controls,javafx.fxml -cp .:"path\to\mysql-connector-java-X.X.XX.jar" *.java
   ```
   - After the Java is done compiling, type in the following:
   ```
-  java -cp .:"path\to\mysql-connector-java-X.X.XX.jar" Main gui
+  java --module-path "path\to\javafx-sdk-11.X.X\lib" --add-modules=javafx.controls,javafx.fxml -cp .:"path\to\mysql-connector-java-X.X.XX.jar" Main gui
   ```
   - Make sure to add `gui` at the end.
 
@@ -73,6 +72,26 @@ For now, only a console version of the program is available. In future, we will 
   - Add `mysql-connector-java-X.X.XX.jar` to your project's External Library/Archive.
   - Go to Build → Edit Configurations and type `gui` in 'Program arguments' field. (IntelliJ)
   - Go to Run → Run Configurations tab and type `gui` in 'Program arguments' section. (Eclipse)
+  - Add the following to the VM option field `--module-path "path\to\javafx-sdk-11.X.X\lib" --add-modules=javafx.controls,javafx.fxml`
+
+## Running the program (GUI | Java 10 and earlier)
+Javafx comes bundled with earlier versions of JDK. Using similar command as the console version and replacing `console` with `gui` as command line argument should suffice.
+
+Example:
+```
+javac -cp .;"path\to\mysql-connector-java-X.X.XX.jar" *.java
+```
+
+If nothing works, use the `jfxrt.jar` and add it to classpath when compiling and running the program.
+
+Example:
+  ```
+  javac -cp .;"path\to\mysql-connector-java-X.X.XX.jar";"path/to/jfxrt.jar" *.java
+  ```
+  And,
+  ```
+  java -cp .;"path\to\mysql-connector-java-X.X.XX.jar";"path/to/jfxrt.jar" Main gui
+  ```
 
 ## References
   1. https://stackoverflow.com/a/37276108
